Reetan.Nayak Dev 25/force-app/main/default/objects/Test__c/Test__c.object-meta.xml
<CustomObject>
    <label>Test</label>
    <nameField>
        <displayFormat>T{000}</displayFormat>
        <label>TestId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>