Reetan.Nayak Dev 25/force-app/main/default/objects/Test__c/fields/Assignment_Approval__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Approval</label>
    <type>Checkbox</type>
</CustomField>