Reetan.Nayak Dev 25/force-app/main/default/objects/Test__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <label>Faculty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bishnu</fullName>
            </value>
            <value>
                <fullName>Manoj</fullName>
            </value>
            <value>
                <fullName>Baruna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>