Reetan.Nayak Dev 25/force-app/main/default/objects/Test__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TaskId</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>