Reetan.Nayak Dev 25/force-app/main/default/objects/Test__c/fields/Test_Approval__c.field-meta.xml
<CustomField>
    <fullName>Test_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Approval</label>
    <type>Checkbox</type>
</CustomField>