Reetan.Nayak Dev 25/force-app/main/default/objects/Test__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <label>Test Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>