Reetan.Nayak Dev 25/force-app/main/default/objects/Test__c/fields/TestPendingStatus__c.field-meta.xml
<CustomField>
    <fullName>TestPendingStatus__c</fullName>
    <label>TestPendingStatus</label>
    <length>30</length>
    <type>Text</type>
</CustomField>